test/Sema/bitwise_copyable_package_resilience.code
// RUN: %empty-directory(%t)
// RUN: split-file %s %t

// RUN: %target-language-frontend                           \
// RUN:     %t/Library.code                             \
// RUN:     -emit-module                                 \
// RUN:     -package-name Package                        \
// RUN:     -enable-library-evolution                    \
// RUN:     -module-name Library                         \
// RUN:     -emit-module-path %t/Library.codemodule     \
// RUN:     -emit-module-interface-path %t/Library.codeinterface

// RUN: %target-language-frontend                           \
// RUN:     %t/Downstream.code                          \
// RUN:     -typecheck -verify                           \
// RUN:     -package-name Package                        \
// RUN:     -debug-diagnostic-names                      \
// RUN:     -I %t

//--- Library.code

// package => exported => !inferred
package struct PackageStruct {
  package var int: Int
}

// public => exported => !inferred
public struct PublicStruct {
  public var int: Int
}

//--- Downstream.code
import Library

fn take<T : BitwiseCopyable>(_ t: T) {}

fn passPackageStruct(_ s: PackageStruct) { take(s) } // expected-error{{type_does_not_conform_decl_owner}}
                                                       // expected-note@-3{{where_requirement_failure_one_subst}}

fn passPublicStruct(_ s: PublicStruct) { take(s) } // expected-error{{type_does_not_conform_decl_owner}}
                                                     // expected-note@-6{{where_requirement_failure_one_subst}}
